syntax = "proto3";

package account.package.api.v1;

option go_package = "apiv1";
option php_namespace = "Account\\Package\\Api\\V1";

import "proto/api/v1/package.proto";

service PackageAPI {
  rpc GetPackage (PackageRequest) returns (PackageResult);
}

// get users
message PackageRequest {
    // number of users requested
    int32 result_count = 1;
}

// return list of users
message PackageResult {
    // list of users
    repeated Person persons = 1;
}
